Use of dynamic template for assignable list

--- a/src/app/modules/assignments/components/assignment/assignment.component.html
+++ b/src/app/modules/assignments/components/assignment/assignment.component.html
@@ -51,7 +51,11 @@
       <!-- ASSIGNEE -->
       <div fxFlex="30" fxFlex.lt-sm="auto">
         <ng-template #assignableList>
-          <mat-selection-list [multiple]="false">
+          <mat-selection-list
+            #options
+            [multiple]="false"
+            (selectionChange)="closeDialog()"
+          >
             <mat-list-option
               *ngFor="
                 let user of assignableListByPart[
