--- a/src/app/shared/components/user-menu/user-menu.component.html
+++ b/src/app/shared/components/user-menu/user-menu.component.html
@@ -9,7 +9,7 @@
     <span fxLayout="row" fxLayoutAlign="start center">
       <img class="avatar" src="assets/images/avatars/noavatar.png" />
       <!-- fxHide fxShow.gt-xs -->
-      <!-- <span class="name">{{ currentUser?.firstName }}</span> -->
+      <span class="name">{{ currentUser?.email }}</span>
       <mat-icon class="icon">keyboard_arrow_down</mat-icon>
     </span>
   </button>
