Replaced Nativescript applicationId with org.lesauf.thassign

--- a/src/app/auto-generated/auto-generated.component.tns.html
+++ b/src/app/auto-generated/auto-generated.component.tns.html
@@ -1,1 +1,5 @@
-<Button text="auto-generated works!" class="btn btn-primary"></Button>
+<button
+  text="auto-generated works!"
+  class="btn btn-primary"
+  (tap)="greet()"
+></button>
