Fixing some bugs on mobile

--- a/src/app/layouts/auth-layout/auth-layout.component.tns.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.tns.html
@@ -1,5 +1,9 @@
-<GridLayout>
+<StackLayout>
   <!-- This will contain any angular routes you setup -->
+
+  <button text="1st iteration" class="btn btn-primary"></button>
+
+  <button text="2nd Try" class="btn btn-primary"></button>
+
   <page-router-outlet></page-router-outlet>
-  <button text="authLayout works!" class="btn btn-primary"></button>
-</GridLayout>
+</StackLayout>
