--- a/src/app/modules/auth/login/login.component.tns.html
+++ b/src/app/modules/auth/login/login.component.tns.html
@@ -1,1 +1,3 @@
-<button text="login works!" class="btn btn-primary"></button>
+<StackLayout>
+  <button text="login works!" class="btn btn-primary"></button>
+</StackLayout>
