--- a/src/app/modules/auth/register/register.component.tns.html
+++ b/src/app/modules/auth/register/register.component.tns.html
@@ -1,1 +1,3 @@
-<button text="register works!" class="btn btn-primary"></button>
+<StackLayout>
+  <button text="Register works!" class="btn btn-primary"></button>
+</StackLayout>
