Prepared initial modules

--- a/src/app/layouts/auth-layout/auth-layout.component.tns.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.tns.html
@@ -3,7 +3,7 @@
 
   <button text="1st iteration" class="btn btn-primary"></button>
 
-  <button text="2nd Try" class="btn btn-primary"></button>
+  <router-outlet></router-outlet>
 
-  <page-router-outlet></page-router-outlet>
+  <button text="2nd Try" class="btn btn-primary"></button>
 </StackLayout>
