--- a/src/app/modules/auth/login/login.component.tns.html
+++ b/src/app/modules/auth/login/login.component.tns.html
@@ -1,3 +1,3 @@
-<StackLayout>
-  <button text="login works!" class="btn btn-primary"></button>
-</StackLayout>
+<!-- <StackLayout> -->
+<button text="login works!" class="btn btn-primary"></button>
+<!-- </StackLayout> -->
