Working on login page

--- a/src/app/layouts/auth-layout/auth-layout.component.tns.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.tns.html
@@ -1,9 +1,4 @@
 <StackLayout>
   <!-- This will contain any angular routes you setup -->
-
-  <button text="1st iteration" class="btn btn-primary"></button>
-
-  <router-outlet></router-outlet>
-
-  <button text="2nd Try" class="btn btn-primary"></button>
+  <page-router-outlet></page-router-outlet>
 </StackLayout>
