--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,7 +1,6 @@
 <GridLayout>
   <!-- This will contain any angular routes you setup -->
-  <page-router-outlet></page-router-outlet>
 
-  
-  
+  <!-- <page-router-outlet actionBarVisibility="never"></page-router-outlet> -->
+  <page-router-outlet class="ns-dark"></page-router-outlet>
 </GridLayout>
