Before resetting the nativescript thing

--- a/src/app/modules/auth/auth.component.tns.scss
+++ b/src/app/modules/auth/auth.component.tns.scss
@@ -7,9 +7,8 @@ FlexboxLayout {
   background-image: url("~/assets/login11.jpg");
 }
 
-StackLayout {
+GridLayout {
   width: 300;
-  padding: 10 16;
   background-color: light(background);
 
   @at-root .ns-dark & {
