--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -2,5 +2,5 @@
   <!-- This will contain any angular routes you setup -->
 
   <!-- <page-router-outlet actionBarVisibility="never"></page-router-outlet> -->
-  <page-router-outlet class="ns-dark"></page-router-outlet>
+  <page-router-outlet></page-router-outlet>
 </GridLayout>
