--- a/src/app/modules/home/home.component.tns.html
+++ b/src/app/modules/home/home.component.tns.html
@@ -1,16 +1,18 @@
 <StackLayout>
-  <label text="Parts loaded: {{ parts.length }}" textWrap="true"></label>
+  <label text="Home Work !" textWrap="true"></label>
+
+  <!-- <label text="Parts loaded: {{ parts.length }}" textWrap="true"></label>
   <label text="Users loaded: {{ users.length }}" textWrap="true"></label>
   <label
     text="Assignments loaded: {{ assignments.length }}"
     textWrap="true"
-  ></label>
+  ></label> -->
 </StackLayout>
 
-<ActivityIndicator
+<!-- <ActivityIndicator
   [busy]="loadedData.users && loadedData.parts"
   [visibility]="isLoading ? 'visible' : 'collapsed'"
   row="1"
   horizontalAlignment="center"
   verticalAlignment="center"
-></ActivityIndicator>
+></ActivityIndicator> -->
