--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<!-- Cities:
+<ul>
+  <li class="text" *ngFor="let city of cities | async">
+    {{ city.name }}
+  </li>
+</ul> -->
+
 <router-outlet></router-outlet>
