--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -2,12 +2,16 @@
   <!-- This will contain any angular routes you setup -->
 
   <!-- <page-router-outlet actionBarVisibility="never"></page-router-outlet> -->
-  <label text="Cities" textWrap="true"></label>
+
   <StackLayout>
-    <label text="" textWrap="true" *ngFor="let city of cities | async">
-      {{ city.name }}
+    <label text="Cities" textWrap="true"></label>
+    <label
+      [text]="city.name"
+      textWrap="true"
+      *ngFor="let city of cities | async"
+    >
     </label>
   </StackLayout>
 
-  <page-router-outlet></page-router-outlet>
+  <!-- <page-router-outlet></page-router-outlet> -->
 </GridLayout>
