--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-Cities:
+<!-- Cities:
 <ul>
   <li class="text" *ngFor="let city of cities | async">
     {{ city.name }}
   </li>
-</ul>
+</ul> -->
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
