--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,6 @@
 <!-- <button mat-button (click)="addUser()">Add one more</button> -->
+<!-- <a routerLink="/auth/logout" routerLinkActive="active">Logout</a>
+<h1>Home works</h1> -->
 
 <!--<ng-container *ngIf="{-->
 <!--    users: users$ | async,-->
