--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -9,7 +9,7 @@
             fxLayoutAlign="start stretch"
             fxLayoutGap="1em"
             [formGroup]="userForm"
-            (ngSubmit)="submit()"
+            (ngSubmit)="submit('emailPassword')"
           >
             <div *ngIf="formMessages.all" class="help is-danger">
               <legend>{{ formMessages.all | translate }}</legend>
@@ -75,7 +75,7 @@
                   | titlecase
               }}
             </button>
-            <button mat-raised-button type="button" (click)="googleAuth()">
+            <button mat-raised-button type="button" (click)="submit('google')">
               {{ "Google" | translate | titlecase }}
             </button>
           </form>
