--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -13,5 +13,5 @@
     </label>
   </StackLayout>
 
-  <!-- <page-router-outlet></page-router-outlet> -->
+  <page-router-outlet></page-router-outlet>
 </GridLayout>
