Working on login page mobile

--- a/src/app/modules/home/home.component.tns.html
+++ b/src/app/modules/home/home.component.tns.html
@@ -1,5 +1,6 @@
 <StackLayout>
   <label text="Home Work !" textWrap="true"></label>
+  <button text="Logout" (tap)="logout()"></button>
 
   <!-- <label text="Parts loaded: {{ parts.length }}" textWrap="true"></label>
   <label text="Users loaded: {{ users.length }}" textWrap="true"></label>
