--- a/src/app.scss
+++ b/src/app.scss
@@ -6,3 +6,18 @@
 This is where the vast majority of your CSS code goes. */
 @import "~@nativescript/theme/scss/variables";
 // @import "~@nativescript/theme/scss/variables/blue";
+
+.far {
+  font-family: Font Awesome 5 Free, fa-regular-400;
+  font-weight: 400;
+}
+
+.fab {
+  font-family: Font Awesome 5 Brands, fa-brands-400;
+  font-weight: 400;
+}
+
+.fas {
+  font-family: Font Awesome 5 Free, fa-solid-900;
+  font-weight: 900;
+}
