--- a/src/app/modules/users/pages/user-list/user-list.component.html
+++ b/src/app/modules/users/pages/user-list/user-list.component.html
@@ -1,8 +1,13 @@
-<button mat-fab matTooltip="{{ 'add-user' | translate | titlecase }}" [routerLink]="['/users/add']" class="mat-fab-bottom-right">
+<button
+  mat-fab
+  matTooltip="{{ 'add-user' | translate | titlecase }}"
+  [routerLink]="['/users/add']"
+  class="mat-fab-bottom-right"
+>
   <mat-icon>person_add</mat-icon>
 </button>
 
-<h2>{{ 'users' | translate | titlecase }}</h2>
+<h2>{{ "users" | translate | titlecase }}</h2>
 
 <!-- User search bar -->
 <div>
@@ -11,7 +16,13 @@
 
 <!-- Generate button -->
 <div fxLayout="row" fxLayoutAlign="end start">
-  <button mat-raised-button matTooltip="{{ 'generate-users' | translate | titlecase }}" (click)="generateUsers()" fxFlex="1" fxFlexAlign="right">
+  <button
+    mat-raised-button
+    matTooltip="{{ 'generate-users' | translate | titlecase }}"
+    (click)="generateUsers()"
+    fxFlex="1"
+    fxFlexAlign="right"
+  >
     <mat-icon>autorenew</mat-icon>
   </button>
 </div>
@@ -19,34 +30,55 @@
 <!-- Table control bar -->
 <div fxLayout="row" fxLayoutAlign="space-between stretch">
   <div fxFlex="30px" fxFlexOffset="25px" fxFlexAlign="center">
-    <mat-checkbox [checked]="masterChecked" matTooltip="{{ 'select-all' | translate }}"></mat-checkbox>
+    <mat-checkbox
+      [checked]="masterChecked"
+      matTooltip="{{ 'select-all' | translate }}"
+    ></mat-checkbox>
   </div>
   <div fxFlexAlign="center">
     <button mat-icon-button (click)="openSort($event)">
       <mat-icon>sort</mat-icon>
     </button>
     <button mat-button disabled="true">
-      {{ 'sort-by' | translate | titlecase }}
-      {{ sort.replace('_', '-') | translate }}
+      {{ "sort-by" | translate | titlecase }}
+      {{ sort.replace("_", "-") | translate }}
     </button>
-    <button mat-icon-button matTooltip="{{ 'sort-order' | translate }}" (click)="toggleSortOrder()">
+    <button
+      mat-icon-button
+      matTooltip="{{ 'sort-order' | translate }}"
+      (click)="toggleSortOrder()"
+    >
       <mat-icon>
-        arrow_{{ sortOrder === 'asc' ? 'upward' : 'downward' }}
+        arrow_{{ sortOrder === "asc" ? "upward" : "downward" }}
       </mat-icon>
     </button>
   </div>
   <div fxFlex="30px" fxFlexAlign="center">
-    <button mat-icon-button [disabled]="noUserChecked" matTooltip="{{ 'delete' | translate }}" appConfirm="{{ 'dialog.delete.confirmation.title' | translate }}" message="{{ 'dialog.delete.confirmation.message' | translate }}" cancelButton="{{ 'dialog.delete.confirmation.cancelButton' | translate }}"
+    <button
+      mat-icon-button
+      [disabled]="noUserChecked"
+      matTooltip="{{ 'delete' | translate }}"
+      appConfirm="{{ 'dialog.delete.confirmation.title' | translate }}"
+      message="{{ 'dialog.delete.confirmation.message' | translate }}"
+      cancelButton="{{ 'dialog.delete.confirmation.cancelButton' | translate }}"
       confirmButton="{{
         'dialog.delete.confirmation.confirmButton' | translate
-      }}" (confirmed)="delete(getCheckedUsers())">
+      }}"
+      (confirmed)="delete(getCheckedUsers())"
+    >
       <mat-icon>delete</mat-icon>
     </button>
   </div>
   <div fxFlex></div>
 </div>
 
-<mat-paginator [length]="dataLength" [pageSize]="pageSize" [pageIndex]="pageIndex" [pageSizeOptions]="pageSizeOptions" (page)="pageEvent = $event">
+<mat-paginator
+  [length]="dataLength"
+  [pageSize]="pageSize"
+  [pageIndex]="pageIndex"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="pageEvent = $event"
+>
 </mat-paginator>
 
 <ng-template #loading>
@@ -55,12 +87,33 @@
 <!--<div *ngIf="users; else loading">-->
 <div *ngIf="pUsers$ | async as pUsers; else loading">
   <mat-accordion multi="false">
-    <mat-expansion-panel hideToggle="true" #mep="matExpansionPanel" *ngFor="let user of pUsers; last as last; trackBy: trackById">
-      <mat-expansion-panel-header fxLayout="row" fxLayoutAlign="start stretch" fxLayoutGap>
-        <mat-panel-title fxFlex fxFlex.lt-sm="100" fxFlexAlign="center" fxLayout="row" fxLayoutAlign="space-between stretch" fxLayoutGap="15px">
+    <mat-expansion-panel
+      hideToggle="true"
+      #mep="matExpansionPanel"
+      *ngFor="let user of pUsers; last as last; trackBy: trackById"
+    >
+      <mat-expansion-panel-header
+        fxLayout="row"
+        fxLayoutAlign="start stretch"
+        fxLayoutGap
+      >
+        <mat-panel-title
+          fxFlex
+          fxFlex.lt-sm="100"
+          fxFlexAlign="center"
+          fxLayout="row"
+          fxLayoutAlign="space-between stretch"
+          fxLayoutGap="15px"
+        >
           <!-- Checkbox -->
           <div fxFlex="25px" fxFlexAlign="center">
-            <mat-checkbox name="userCheckbox" [value]="user._id" [checked]="masterChecked" (change)="handleCheckboxes()" (click)="$event.stopPropagation()"></mat-checkbox>
+            <mat-checkbox
+              name="userCheckbox"
+              [value]="user._id"
+              [checked]="masterChecked"
+              (change)="handleCheckboxes()"
+              (click)="$event.stopPropagation()"
+            ></mat-checkbox>
           </div>
 
           <!-- Type icon -->
@@ -88,7 +141,11 @@
       <ng-template matExpansionPanelContent>
         <!-- Lazy rendering -->
 
-        <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="start stretch">
+        <div
+          fxLayout="row wrap"
+          fxLayout.lt-sm="column"
+          fxLayoutAlign="start stretch"
+        >
           <div fxFlex="45">
             <mat-icon inline="true">person</mat-icon>
             {{ user.type }}
@@ -110,38 +167,51 @@
         </div>
 
         <mat-chip-list fxLayout="row" fxLayoutAlign="start stretch">
-          <mat-chip class="mat-chip-list-stacked" aria-orientation="vertical" [selectable]="false" disabled *ngFor="let part of user.parts">
+          <mat-chip
+            class="mat-chip-list-stacked"
+            aria-orientation="vertical"
+            [selectable]="false"
+            disabled
+            *ngFor="let part of user.parts"
+          >
             {{ part.name | translate }}
           </mat-chip>
         </mat-chip-list>
 
         <mat-action-row>
           <button mat-button (click)="mep.expanded = false">
-              <mat-icon inline="true">close</mat-icon>
+            <mat-icon inline="true">close</mat-icon>
 
-              {{ 'close' | translate | titlecase }}
-            </button>
-          <button mat-button appConfirm="{{ 'dialog.delete.confirmation.title' | translate }}" message="{{ 'dialog.delete.confirmation.message' | translate }}" cancelButton="{{
-                'dialog.delete.confirmation.cancelButton' | translate
-              }}" confirmButton="{{
-                'dialog.delete.confirmation.confirmButton' | translate
-              }}" (confirmed)="delete([user._id])">
-              <mat-icon inline="true">delete</mat-icon>
+            {{ "close" | translate | titlecase }}
+          </button>
+          <button
+            mat-button
+            appConfirm="{{ 'dialog.delete.confirmation.title' | translate }}"
+            message="{{ 'dialog.delete.confirmation.message' | translate }}"
+            cancelButton="{{
+              'dialog.delete.confirmation.cancelButton' | translate
+            }}"
+            confirmButton="{{
+              'dialog.delete.confirmation.confirmButton' | translate
+            }}"
+            (confirmed)="delete([user._id])"
+          >
+            <mat-icon inline="true">delete</mat-icon>
 
-              {{ 'delete' | translate | titlecase }}
-            </button>
+            {{ "delete" | translate | titlecase }}
+          </button>
           <button mat-button (click)="openView($event, user)">
-              <mat-icon inline="true">description</mat-icon>
+            <mat-icon inline="true">description</mat-icon>
 
-              {{ 'view' | translate | titlecase }}
-            </button>
+            {{ "view" | translate | titlecase }}
+          </button>
           <button mat-button (click)="goto('/users/edit', user)">
-              <!-- [routerLink]="['/users/edit']"
+            <!-- [routerLink]="['/users/edit']"
            [state]="{ user: user }" -->
-              <mat-icon inline="true">edit</mat-icon>
+            <mat-icon inline="true">edit</mat-icon>
 
-              {{ 'edit' | translate | titlecase }}
-            </button>
+            {{ "edit" | translate | titlecase }}
+          </button>
         </mat-action-row>
       </ng-template>
     </mat-expansion-panel>
@@ -149,4 +219,10 @@
 </div>
 <!--</div>-->
 
-<mat-paginator [length]="dataLength" [pageSize]="pageSize" [pageIndex]="pageIndex" [pageSizeOptions]="pageSizeOptions" (page)="pageEvent = $event"></mat-paginator>
+<mat-paginator
+  [length]="dataLength"
+  [pageSize]="pageSize"
+  [pageIndex]="pageIndex"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="pageEvent = $event"
+></mat-paginator>
