--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -8,8 +8,7 @@
 <!--  } as loadedData">-->
 <!--<div *ngIf="loadedData.users && loadedData.parts; else loading">-->
 <p>Parts loaded: {{ parts.length }}</p>
-<p *ngIf="">Users loaded: {{ users?.length }}</p>
-<p *ngIf="users">Users loaded: {{ users?.length }}</p>
+<p *ngIf="users$ | async as usersObs">Users Observable loaded: {{ usersObs.length }}</p>
 <p>Assignments loaded: {{ assignments?.length }}</p>
 
 <!-- <app-picker title="Choose a user" placeholder="Choose a user ..." [options]="users" labelField="fullName"></app-picker> -->
