--- a/src/app/modules/users/pages/user-list/user-list.component.html
+++ b/src/app/modules/users/pages/user-list/user-list.component.html
@@ -7,7 +7,7 @@
   <mat-icon>person_add</mat-icon>
 </button>
 
-<h2>{{ "users" | translate | titlecase }}</h2>
+<h2>{{ 'users' | translate | titlecase }}</h2>
 
 <!-- User search bar -->
 <div>
@@ -40,8 +40,8 @@
       <mat-icon>sort</mat-icon>
     </button>
     <button mat-button disabled="true">
-      {{ "sort-by" | translate | titlecase }}
-      {{ sort.replace("_", "-") | translate }}
+      {{ 'sort-by' | translate | titlecase }}
+      {{ sortField.replace('_', '-') | translate }}
     </button>
     <button
       mat-icon-button
@@ -49,7 +49,7 @@
       (click)="toggleSortOrder()"
     >
       <mat-icon>
-        arrow_{{ sortOrder === "asc" ? "upward" : "downward" }}
+        arrow_{{ sortOrder === 'asc' ? 'upward' : 'downward' }}
       </mat-icon>
     </button>
   </div>
@@ -166,12 +166,14 @@
           </div>
         </div>
 
-        <mat-chip-list fxLayout="row" fxLayoutAlign="start stretch">
+        <mat-chip-list
+          selectable="false"
+          fxLayout="row"
+          fxLayoutAlign="start stretch"
+        >
           <mat-chip
             class="mat-chip-list-stacked"
             aria-orientation="vertical"
-            [selectable]="false"
-            disabled
             *ngFor="let part of user.parts"
           >
             {{ part.name | translate }}
@@ -182,7 +184,7 @@
           <button mat-button (click)="mep.expanded = false">
             <mat-icon inline="true">close</mat-icon>
 
-            {{ "close" | translate | titlecase }}
+            {{ 'close' | translate | titlecase }}
           </button>
           <button
             mat-button
@@ -198,19 +200,19 @@
           >
             <mat-icon inline="true">delete</mat-icon>
 
-            {{ "delete" | translate | titlecase }}
+            {{ 'delete' | translate | titlecase }}
           </button>
           <button mat-button (click)="openView($event, user)">
             <mat-icon inline="true">description</mat-icon>
 
-            {{ "view" | translate | titlecase }}
+            {{ 'view' | translate | titlecase }}
           </button>
           <button mat-button (click)="goto('/users/edit', user)">
             <!-- [routerLink]="['/users/edit']"
            [state]="{ user: user }" -->
             <mat-icon inline="true">edit</mat-icon>
 
-            {{ "edit" | translate | titlecase }}
+            {{ 'edit' | translate | titlecase }}
           </button>
         </mat-action-row>
       </ng-template>
