--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -9,7 +9,7 @@
 <!--<div *ngIf="loadedData.users && loadedData.parts; else loading">-->
 <p>Parts loaded: {{ parts.length }}</p>
 <p *ngIf="users$ | async as usersObs">Users Observable loaded: {{ usersObs.length }}</p>
-<p>Assignments loaded: {{ assignments?.length }}</p>
+<p *ngIf="assignments$ | async as assignmentsObs">Assignments loaded: {{ assignmentsObs.length }}</p>
 
 <!-- <app-picker title="Choose a user" placeholder="Choose a user ..." [options]="users" labelField="fullName"></app-picker> -->
 
